[package]
name = "psm"
version = "0.1.5"
edition = "2021"
authors = ["Zachary"]
description = "A cli tool for multi ssh remote server management."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
clap = { version = "3", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cli-table = "0.4"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
