[package]
name = "psm"
version = "0.2.6"
edition = "2021"
license = "MIT"
authors = ["Zachary S <cn.zachary@gmail.com>"]
description = "A cli tool for multi remote SSH server management."
repository = "https://github.com/NitronPlus/psm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
clap = { version = "3", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cli-table = "0.4"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
